# obs-studio

libobs/: obs.c
libobs-opengl/: gl-stagesurf.c  gl-subsystem.h
plugins/: CMakeLists.txt
plugins/audio-vis/: CMakeLists.txt  audio-buffer.c  audio-buffer.h  audio-monitor.c  audio-monitor.h  audio-vis.c  avis-utils.c  avis-utils.h  vis-spectrum.c  vis-spectrum.h  visual.c  visual.h
plugins/audio-vis/data/locale/: en-US.ini
plugins/obs-filters/: mask-filter.c
plugins/obs-filters/data/: blend_mix.effect
plugins/obs-filters/data/locale/: en-US.ini
plugins/text-pango/: CMakeLists.txt  text-pango.c  text-pango.h
plugins/text-pango/data/locale/: en-US.ini
